# libcyaml

./: .travis.yml  CHANGES.md  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: ci-devel.yaml  ci.yaml  coverage.yaml  static-analysis.yaml
docs/: api.doxygen.conf  api.doxygen.conf.in  devel.doxygen.conf  devel.doxygen.conf.in  guide.md  meson.build
examples/: meson.build
examples/diagram/: drawing.yaml  main.c
examples/numerical/: main.c  meson.build
examples/planner/: main.c  meson.build
include/: cyaml.h
include/cyaml/: cyaml.h  cyaml_ex.h  private.h
src/: base64.c  base64.h  copy.c  data.h  extended.c  free.c  load.c  mem.c  mem.h  meson.build  save.c  utf8.c  utf8.h  util.c  util.h
test/: meson.build
test/data/: meson.build
test/units/: base64.c  copy.c  errs.c  file.c  free.c  load.c  load_ex.c  meson.build  save.c  test.c  test.h  ttest.h  utf8.c  util.c
